# cloudguard-interfaces

./: README.md  pyproject.toml
.github/workflows/: package_and_publish.yaml
cloudguard_interfaces/: config.py  main.py  providers.py
cloudguard_interfaces/providers/aws/: config.py  interface.py
cloudguard_interfaces/providers/azure/: config.py  interface.py
cloudguard_interfaces/providers/gcp/: config.py  interface.py
cloudguard_interfaces/utils/: json.py
